--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <% comments.each do |c| %>
  <div class="secondary-comment">
     <div class="name-created comment-clear">
-      <div class="text-left">@<%= link_to c.user.name, user_path(c.user_id) %></div>
+      <div class="text-left"><%= link_to "@#{c.user.name}", user_path(c.user_id) %></div>
       <div class="text-right"><%= l c.created_at %></div>
     </div>
     <div class="comment-content">
