--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,42 +1,42 @@
-  <div id="hello">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 centered">
-          <h1>Portfolio</h1><br><br><br>
-        </div>
+<div id="hello">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 centered">
+        <h1>Portfolio</h1>
       </div>
     </div>
   </div>
+</div>
 
-  <div id="green">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 centered">
-          <%= image_tag 'iphone.png' %>
-        </div>
-        <div class="col-lg-7 centered">
-          <% unless logged_in? %>
-            <%= link_to login_path, id: "login" do %>
-              <h1 class="button-2">ログイン</h1>
-            <% end %>
-            <%= link_to new_user_path, id: "signup" do %>
-              <h1 class="button-2">サインアップ</h1>
-            <% end %>
-          <% else %>
-            <%= link_to current_user do %>
-              <h1 class="button-2">マイページ</h1>
-            <% end %>
-            <%= link_to new_topic_path do %>
-              <h1 class="button-2">新規投稿</h1>
-            <% end %>
-            <%= link_to topics_path do %>
-              <h1 class="button-2">投稿一覧</h1>
-            <% end %>
+<div id="green">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5 centered">
+        <%= image_tag 'iphone.png' %>
+      </div>
+      <div class="col-lg-7 centered">
+        <% unless logged_in? %>
+          <%= link_to login_path, id: "login" do %>
+            <p class="button-2">ログイン</p>
           <% end %>
-        </div>
+          <%= link_to new_user_path, id: "signup" do %>
+            <p class="button-2">サインアップ</p>
+          <% end %>
+        <% else %>
+          <%= link_to current_user do %>
+            <p class="button-2">マイページ</p>
+          <% end %>
+          <%= link_to new_topic_path do %>
+            <p class="button-2">新規投稿</p>
+          <% end %>
+          <%= link_to topics_path do %>
+            <p class="button-2">投稿一覧</p>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
+</div>
 
 <div class="topic-index-wrapper">
   <div class="container">
@@ -57,33 +57,27 @@
             <div class="descript">
               <% unless topic.password_digest %>
                 <% if topic.image.attached? %>
-                  <%= link_to topic_path(topic) do %>
-                    <%= image_tag topic.image %>
-                  <% end %>
+                  <%= link_to (image_tag topic.image), topic_path(topic) %>
                 <% end %>
-
               <% else %>
-
-                <%= link_to "/topic_password/#{topic.id}", id: topic.id do %>
-                  <%= image_tag "password.jpg" %>
-                <% end %>
+                <%= link_to (image_tag "password.jpg"), "/topic_password/#{topic.id}", id: topic.id %>
               <% end %>
             </div>
 
-                <ul class="comments-likes">
-                  <% if logged_in? %>
-                    <%= link_to topic_path(topic) do %>
-                      <li><i class="far fa-comment-dots like-btn"></i></li>
-                    <% end %>
-                    <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'likes/like', locals: { topic: topic} %></li>
-                  <% else %>
-                    <%= link_to topic_path(topic) do %>
-                      <li><i class="far fa-comment-dots like-btn"></i></li>
-                    <% end %>
-                    <li><i class="far fa-heart like-btn" ></i></li>
-                    <li class="likes-position"><%= topic.like_users.count %></li>
-                  <% end %>
-                </ul>
+            <ul class="comments-likes">
+              <% if logged_in? %>
+                <%= link_to topic_path(topic) do %>
+                  <li><i class="far fa-comment-dots like-btn"></i></li>
+                <% end %>
+                <li id="likes_buttons_<%= topic.id %>"><%= render partial: 'likes/like', locals: { topic: topic} %></li>
+              <% else %>
+                <%= link_to topic_path(topic) do %>
+                  <li><i class="far fa-comment-dots like-btn"></i></li>
+                <% end %>
+                <li><i class="far fa-heart like-btn" ></i></li>
+                <li class="likes-position"><%= topic.like_users.count %></li>
+              <% end %>
+            </ul>
 
             <div class="descript">
               <%= link_to topic_path(topic) do %>
@@ -119,8 +113,6 @@
 
   <div id="copyrights">
     <div class="container">
-      <p>
-        &copy; Copyrights <strong>Takaya Hirukawa</strong>. All Rights Reserved
-      </p>
+      <p>&copy; Copyrights <strong>Takaya Hirukawa</strong>. All Rights Reserved</p>
     </div>
   </div>
