--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,6 @@
-<!-- Fixed navbar -->
-<div id="thenavbar" class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="/"><i class="fas fa-key"></i></a>
     </div>
     <div class="navbar-collapse collapse">
@@ -40,6 +34,5 @@
         <% end %>
       </ul>
     </div>
-    <!--/.nav-collapse -->
   </div>
 </div>
