--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="card-header">
-      <div class="card-header__avatar"><%= image_tag 'person.png', class:"avatar_img" %></div>
+      <div class="card-header__avatar"><%= image_tag 'person.png', class: "avatar_img" %></div>
       <!--follow-->
       <!--<a class="card-header__follow" href="#">Follow</a>-->
     </div>
@@ -12,7 +12,7 @@
 
     <div class="card-footer">
       <div class="card-footer__topics"> 
-        <a href="#fuu" class='secList'>
+        <a href="#my-topics" class='secList'>
           <div class="et_pb_module">
             <%= @user_topics %>
             <div class="label">Topics</div>
@@ -21,7 +21,7 @@
       </div>
 
       <div class="card-footer__likes">
-         <a href="#euu" class='secList'>
+         <a href="#my-likes" class='secList'>
            <div class="et_pb_module">
               <%= @user_likes %>
               <div class="label">Likes</div>
@@ -30,7 +30,7 @@
       </div>
       
       <div class="card-footer__comments">
-        <a href="#guu" class='secList'>
+        <a href="#my-comments" class='secList'>
           <div class="et_pb_module">
             <%= @user_comments %>
             <div class="label">Comments</div>
@@ -43,19 +43,19 @@
 </div>
 
 <div class="mypage-footer">
-  <div id="fuu" class="section">
+  <div id="my-topics" class="section">
     <div class="et_pb_text_inner1">
       <%= render partial: 'topics', locals: { comments: @my_topics } %>
     </div>  
   </div>
   
-  <div id="euu" class="section">
+  <div id="my-likes" class="section">
     <div class="et_pb_text_inner2">
       <%= render partial: 'topics', locals: { comments: @my_likes } %>
     </div>
   </div>
   
-  <div id="guu" class="section">
+  <div id="my-comments" class="section">
     <div class="et_pb_text_inner3">
       <%= render partial: 'topics', locals: { comments: @my_comments } %>
     </div>  
@@ -70,11 +70,7 @@ $(function(){
   
   $('.secList').on('click',function(){   
     $('.section').not($($(this).attr('href'))).hide();
-    // フェードイン・アウトのアニメーション付で、表示・非表示を交互に実行
     $($(this).attr('href')).fadeToggle(0);
-    
-    // show を使うと、表示するだけ （ 同じボタンを何回押しても変わらない ）
-    // $($(this).attr('href')).show();
   });
 });
 </script>
