--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,10 +8,11 @@
         
       <div class="col-md-6 col-md-offset-3">
         <%= form_with url: topics_path, method: :get, local: true do |f| %>
-          <%= f.select :option, [['新着順', 'new'],
-                              ['古い順', 'old'],
-                              ['いいね多い順', 'like_most'],
-                            ] %>
+          <select name="option">
+            <option value="new">新着順</option>
+            <option value="old">古い順</option>
+            <option value="like_most">いいね多い順</option>
+          </select>
           <%= f.submit "検索" %>
         <% end %>
         <% end %>
