fix new line in show,comment

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -23,7 +23,7 @@
           </ul>
 
           <div class="topic-text">
-            <%= simple_format(@topic.description, {}, wrapper_tag: "a") %>
+            <%= safe_join(@topic.description.split("\n"), tag(:br)) %>
           </div>
 
           <div class="created-destroy">
