--- a/app/views/users/_topics.html.erb
+++ b/app/views/users/_topics.html.erb
@@ -1,6 +1,6 @@
 <div class="topic-index-wrapper">
   <div class="container">
-    <% comments.each do |topic| %>
+    <% topics.each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
@@ -56,13 +56,11 @@
               <% end %>
             </div>
 
-            <% if logged_in? %>
               <% if topic.user_id == current_user.id %>
-              <div class="text-right" >
-                <%= link_to '削除', "#{topic.id}/destroy", method: :delete %>
-              </div>
+                <div class="text-right" >
+                  <%= link_to '削除', "/topics/#{topic.id}/destroy", method: :delete %>
+                </div>
               <% end %>
-            <% end %>
 
           </div>
         </div>
