fix my page ajax

--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$('#likes_buttons_<%= @topic.id %>').html("<%= j(render partial: 'likes/like', locals: {topic: @topic}) %>");
+$('[id=likes_buttons_<%= @topic.id %>]').html("<%= j(render partial: 'likes/like', locals: {topic: @topic}) %>");
