--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,11 +20,17 @@
               <li><i class="far fa-heart like-btn" ></i></li>
               <li class="likes-position"><%= @topic.like_users.count %></li>
             <% end %>
-            <li><i class="far fa-share-square like-btn share-btn"></i></li>
-            <div id="share-field">
-              <%= render partial: 'email_field' %>
-            </div>
+            <li><i class="far fa-share-square like-btn share-btn"></i><p class="arrow_box">クリックしてメールでシェア</p></li>
           </ul>
+          <div id="share-field">
+            <%= form_with url: {controller: 'topics', action: 'show' }, method: :get, local: true do |f| %>
+              <div class="form-group">
+                <%= f.text_field :share, placeholder: "送信先のメールアドレス", class: 'form-control', id: "share-text-field" %>
+                <%= hidden_field_tag :pass, @topic.password_digest %>
+              </div>
+             <%= f.submit "送信", class: 'btn-block', id: 'share-submit-btn' %>
+            <% end %>
+          </div>
 
           <div class="topic-text">
             <a><%= safe_join(@topic.description.split("\n"), tag(:br)) %></a>
@@ -73,5 +79,12 @@
   $('.share-btn').on('click',function(){   
     $('#share-field').toggle();
   });
+  
+  $('.share-btn').hover(function() {
+    $(this).next('p').show();
+  }, function(){
+    $(this).next('p').hide();
+  });
+  
 });
 </script>
