--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -23,7 +23,7 @@
             <li><i class="far fa-share-square like-btn share-btn"></i><p class="arrow_box">クリックしてメールでシェア</p></li>
           </ul>
           <div id="share-field">
-            <%= form_with url: {controller: 'topics', action: 'show' }, method: :get, local: true do |f| %>
+            <%= form_with url: {controller: 'topics', action: 'send_mail' }, method: :post, local: true do |f| %>
               <div class="form-group">
                 <%= f.text_field :share, placeholder: "送信先のメールアドレス", class: 'form-control', id: "share-text-field" %>
                 <%= hidden_field_tag :pass, @topic.password_digest %>
